--- a/low_mach.tex
+++ b/low_mach.tex
@@ -442,6 +442,7 @@ Note that now the jump operator acts on pressure (it could equivalently operate 
 
 %===================================================================================================
 \subsection{Asymptotic Study in the Low-Mach Regime} \label{sec:lowMach}
+\tcb{What about: Derivation of the all-speed reformulation of the viscosity coefficients }
 %===================================================================================================
 
 The Euler equations with viscous stabilization, \eqt{eq:ent_visc_coeff}, bear some similarities with the Navier-Stokes equations in the sense that dissipative terms (with second-order spatial derivatives) are present in both sets of equations. An abundant literature exists regarding the low-Mach asymptotics of the Navier-Stokes equations \cite{LowMach1, LowMach2, LowMach3, Muller}.   
@@ -1123,12 +1124,14 @@ $6400$&$7.3309974$ $10^{-4}$    & $0.53343397$ & $4.4545754$ $10^{-4}$ & $0.4939
 %---------------------------------------------------------------------------------------------------
 \tcr{until now, you never gave the mu and kappa coefficients, yet they are now different due to their different normalizations.
 Maybe very little for the previous cases, but we need to mention something because, in this section, you show both, and it is better
-to say something than to let the reviewers wonder ... }
+to say something than to let the reviewers wonder ... } \tcb{what do you think of the following?}
 
-
-Here, we investigate the ability of the entropy viscosity method to resolve strong shocks in a liquid phase \tcr{I feel like we need to add a little something to justify why it is so important to study a shock in a liquid but without having to talk about 2-phase flows. can you craft something?}. This test is a preliminary work to the application of the entropy viscosity method to a two phase flow model. The stiffened gas equation of state is used to model a liquid flow with the parameters given in \tbl{tbl:stff_gas_eos}. The computational domain of length $L=1m$ is uniformly discretized using 500 cells. The step initial conditions are given in \tbl{tbl:ic_1d_tests}.
+The purpose of this test is to investigate the ability of the entropy viscosity method to stabilize a strong shock with a small Mach number: the Mach number in the shock region is of the order of $0.1$. In this case, as explained in \sct{sec:lowMach}, the viscosity coefficients are required to have different order of magnitude in order to ensure the correct scaling of the dissipative terms.   
 %
-The simulation is run with a $CFL=1$ until the final time $t_{\text{final}} = 7 \ 10^{-5}s$. Results for pressure, density, velocity and the viscosity coefficients are given in \fig{fig:1d_strong_shock} along with the exact solution for comparison purposes. The numerical solution is in good agreement with exact solution in \fig{fig:1d_strong_shock_var}. The viscosity coefficients $\mu$ and $\kappa$ are not equal in the shock because the Mach number is of order $0.1$. The viscosity coefficient $\kappa$ saturates to the first-order viscosity in the shock region around $x = 0.65m$ and is sufficient to stabilize the numerical scheme. This example illustrates the capabilities of the entropy viscosity method to stabilize a strong shock using liquid fluid properties. 
+The stiffened gas equation of state is used to model a liquid flow with the parameters given in \tbl{tbl:stff_gas_eos}. The computational domain of length $L=1m$ is uniformly discretized using 500 cells. The step initial conditions are given in \tbl{tbl:ic_1d_tests}.
+%
+The simulation is run with a $CFL=1$ until the final time $t_{\text{final}} = 7 \ 10^{-5}s$. Results for pressure, density, velocity and the viscosity coefficients are given in \fig{fig:1d_strong_shock} along with the exact solution for comparison purposes. The numerical solution is in good agreement with exact solution in \fig{fig:1d_strong_shock_var}. The viscosity coefficients $\mu$ and $\kappa$ are not equal in the shock because the Mach number is of order $0.1$. The viscosity coefficient $\kappa$ saturates to the first-order viscosity in the shock region around $x = 0.65m$ and is sufficient to stabilize the numerical scheme. 
+%This example illustrates the capabilities of the entropy viscosity method to stabilize a strong shock using liquid fluid properties. 
 %
 \begin{figure}[H]
         \centering
@@ -1517,7 +1520,7 @@ Following \cite{jlg}, we first write the variable-area equation with dissipative
 \end{equation}
 % 
 \begin{equation}
-\partial_t \left( \rho E A \right) + \div \left[ \vec{u} A \left( \rho E + P \right) \right] = \div h \,.
+\partial_t \left( \rho E A \right) + \div \left[ \vec{u} A \left( \rho E + P \right) \right] = \div ( h + \vec{u} \cdot g )  \,.
 \end{equation}
 \end{subequations}
 %
@@ -1529,8 +1532,8 @@ A \rho \left( \partial_t s + \vec{u} \cdot \grad s \right) = s_e \left[ \div h +
 + \rho s_{\rho} \div f
 \end{multline}
 %
-The next step consists of choosing a definition for each of the dissipative terms so that the left hand-side is positive. The right hand-side of \eqt{eq:ent_res_app} can be simplified using the following relations, $g = A \mu \grad^s \vec{u} + \vec{u} \otimes f$ and $h = \tilde{h} + \vec{u} \cdot g - 0.5 || \vec{u} ||^2 f$, which yields:
-\tcr{I can't get the equation below from the one before with your definitions of h,g,f}
+The next step consists of choosing a definition for each of the dissipative terms so that the left hand-side is positive. The right hand-side of \eqt{eq:ent_res_app} can be simplified using the following relations, $g = A \mu \grad^s \vec{u} + f \otimes \vec{u}$ and $h = \tilde{h} - 0.5 || \vec{u} ||^2 f$, which yields:
+\tcr{I can't get the equation below from the one before with your definitions of h,g,f} \tcb{I fixed it}
 %
 \begin{eqnarray}
 \label{eq:ent_res_app2}
@@ -1542,14 +1545,14 @@ The right hand-side is now integrated by parts:
 \begin{eqnarray}
 \label{eq:ent_res_app3}
 A \rho \left( \partial_t s + \vec{u} \cdot \div s \right) &=& \div \left[ s_e \tilde{h}-s_e e f  + \rho s_{\rho} f \right] -\nonumber \\
-\div \tilde{h} \grad s_e  &-& f \cdot \grad (e s_e) -  f \cdot \grad ( \rho s_{\rho} ) + A s_e \mu \grad^s \vec{u} : \grad \vec{u} \nonumber
+\div \tilde{h} \grad s_e  &+& f \cdot \grad (e s_e) -  f \cdot \grad ( \rho s_{\rho} ) + A s_e \mu \grad^s \vec{u} : \grad \vec{u} \nonumber
 \end{eqnarray}
 %
 where $\grad^s$ is the symmetric gradient. The term $A s_e \mu \grad^s \vec{u} : \grad \vec{u}$ is positive and thus, does not need any further modification. It %
 remains to treat the other terms of the right hand-side that we now call $rhs$:
 %
 \begin{equation}
-rhs = \div \left[ s_e \tilde{h}-s_e e f  + \rho s_{\rho} f \right] - \tilde{h} \cdot \grad s_e  - f \cdot \grad (e s_e) - f \cdot \grad ( \rho s_{\rho} ) \nonumber
+rhs = \div \left[ s_e \tilde{h}-s_e e f  + \rho s_{\rho} f \right] - \tilde{h} \cdot \grad s_e  + f \cdot \grad (e s_e) - f \cdot \grad ( \rho s_{\rho} ) \nonumber
 \end{equation}
 %
 The first term of $rhs$ is a conservative term. By choosing carefully a definition for $\tilde{h}$ and $f$, the conservative term can be expressed as a function of the entropy $s$. It is also required to include the variable area in the choice of the dissipative terms so that when assuming constant area, the regular multi-D Euler equations are recovered. The following definitions for $\tilde{h}$ and $f$ are chosen:
@@ -1561,7 +1564,7 @@ The first term of $rhs$ is a conservative term. By choosing carefully a definiti
 which yields, using the chain rule:
 %
 \begin{equation}
-rhs = \div (\rho A \kappa \grad s ) - A \kappa \underbrace{\left[ \grad (\rho e) \grad s_e  + \grad \rho \grad (e s_e) +  \grad \rho \grad ( \rho s_{\rho} )  \right]}_{\mathbf{Q}} \nonumber
+rhs = \div (\rho A \kappa \grad s ) - A \kappa \underbrace{\left[ \grad (\rho e) \grad s_e  - \grad \rho \grad (e s_e) +  \grad \rho \grad ( \rho s_{\rho} )  \right]}_{\mathbf{Q}} \nonumber
 \end{equation}
 %
 It remains to treat the term $\mathbf{Q}$ that can be recast under a quadratic form, following the work done in \cite{jlg}:
