--- a/low_mach.tex
+++ b/low_mach.tex
@@ -852,7 +852,6 @@ Initially, the liquid is at rest, the temperature is uniform and equal to the st
 The stiffened gas equation of state is used to model the liquid water with the parameters provided in \tbl{tbl:stff_gas_eos}.
 Because of the low pressure difference between the inlet and the outlet, the smooth initial conditions, and the large value of $P_\infty$, the flow remains subsonic and thus does not display any shock. Enthalpy and entropy are conserved through the nozzle and these conservation relations\tcr{[what are they? it sounds vague]} are used to determine the exact solution at steady-state \cite{nozzle_exact}. \tcb{what about: the exact steady-state solution is obtained from \cite{nozzle_exact}}. A uniform mesh of $50$ cells was used to obtain the numerical solution and the time step size was computed using a $CFL$ number of 750.
 Plots of the Mach number, density, and pressure are given at steady-state in \fig{fig:1d_liq_nozzle} for the numerical and exact solutions. The viscosity coefficients are also graphed in \fig{fig:1d_nozzle_liq_visc}. 
-%Since a steady-state analytical solution is available to us (REF), a convergence study is performed in order to demonstrate the accuracy of the entropy viscosity method by computing the L$1$ and L$2$ norms of the error between the numerical and exact solutions.
 \begin{figure}[H]
         \centering
         \begin{subfigure}[b]{0.495\textwidth}
@@ -861,22 +860,21 @@ Plots of the Mach number, density, and pressure are given at steady-state in \fi
                 \caption{Mach number}
                 \label{fig:1d_nozzle_liq_vel}
         \end{subfigure}%
-        %add desired spacing between images, e. g. ~, \quad, \qquad etc. 
-          %(or a blank line to force the subfigure onto a new line)
+
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{liquid_density_numerical_and_exact_50.png}
                 \caption{Density}
                 \label{fig:1d_nozzle_liq_density}
         \end{subfigure}
-
+        
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{liquid_pressure_numerical_and_exact_50.png}
                 \caption{Pressure}
                 \label{fig:1d_nozzle_liq_press}
         \end{subfigure}
-
+        
         \begin{subfigure}[b]{0.495\textwidth}
                 \centering
                 \includegraphics[width=\textwidth]{liquid_viscosity_numerical50.png}
@@ -945,13 +943,13 @@ Now, $c= 4.56289454140364$ and $q=2.18994931029196$. What is happening?
  \hline
 cells& density            & rate & pressure          & rate & velocity           & rate \\ \hline
 4    & 3.106397 $10^{-1}$ & $-$  & 5.254445 $10^{5}$ & $-$  & 3.288543           & $-$  \\ \hline
-8    & 7.491623 $10^{-2}$ & 2.07 & 1.636966 $10^{5}$ & 1.60 & 1.823880           & 0.90 \\ \hline
-16   & 2.079858 $10^{-2}$ & 1.80 & 4.627338 $10^{4}$ & 1.75 & 4.990605 $10^{-1}$ & 1.83 \\ \hline
-32   & 5.329627 $10^{-3}$ & 1.90 & 1.180287 $10^{4}$ & 1.92 & 1.261018 $10^{-1}$ & 1.93 \\ \hline
-64   & 1.341583 $10^{-3}$ & 1.94 & 2.967104 $10^{3}$ & 1.98 & 3.160914 $10^{-2}$ & 1.99 \\ \hline
+8    & 7.491623 $10^{-2}$ & 2.06 & 1.636966 $10^{5}$ & 1.60 & 1.823880           & 0.14 \\ \hline
+16   & 2.079858 $10^{-2}$ & 1.81 & 4.627338 $10^{4}$ & 1.75 & 4.990605 $10^{-1}$ & 1.83 \\ \hline
+32   & 5.329627 $10^{-3}$ & 1.96 & 1.180287 $10^{4}$ & 1.92 & 1.261018 $10^{-1}$ & 1.98 \\ \hline
+64   & 1.341583 $10^{-3}$ & 1.99 & 2.967104 $10^{3}$ & 1.98 & 3.160914 $10^{-2}$ & 1.99 \\ \hline
 128  & 3.359766 $10^{-4}$ & 1.99 & 7.428087 $10^{2}$ & 1.99 & 7.907499 $10^{-3}$ & 1.99 \\ \hline
-256  & 8.403859 $10^{-5}$ & 1.99 & 1.857861 $10^{2}$ & 1.99 & 1.977292 $10^{-3}$ & 1.99 \\ \hline
-512  & 2.10075  $10^{-5}$ & 1.99 & 2.7048   $10^{1}$ & 1.99 & 4.9516   $10^{-4}$ & 1.99 \\ \hline
+256  & 8.403859 $10^{-5}$ & 1.99 & 1.857861 $10^{2}$ & 2.00 & 1.977292 $10^{-3}$ & 2.00 \\ \hline
+512  & 2.10075  $10^{-5}$ & $-$ & 4.7024   $10^{1}$ & $-$ & 4.9516   $10^{-4}$ & $-$ \\ \hline
 \end{tabular}
 \end{center}
 \end{table}
