--- a/low_mach.tex
+++ b/low_mach.tex
@@ -896,13 +896,13 @@ Note that the entropy viscosity coefficient is very small compared to the first-
  \hline
 cells & density         & rate   & pressure        & rate    & velocity         & rate     \\ \hline
 4    & 2.8037 $10^{-1}$ & $-$    & 8.4705 $10^{5}$ & $-$     & 7.2737           & $-$      \\ \hline
-8    & 1.3343 $10^{-1}$ & 1.0713 & 4.7893 $10^{5}$ & 0.24227 & 6.1493           & 0.074683 \\ \hline
-16   & 2.9373 $10^{-2}$ & 2.1835 & 1.0613 $10^{5}$ & 2.3247  & 1.2275           & 2.4501   \\ \hline
-32   & 5.1120 $10^{-3}$ & 2.5225 & 1.8446 $10^{4}$ & 2.6959  & 1.8943 $10^{-1}$ & 3.0966   \\ \hline
-64   & 1.0558 $10^{-3}$ & 2.2755 & 3.7938 $10^{3}$ & 2.3207  & 3.7919 $10^{-2}$ & 2.3323   \\ \hline
-128  & 2.3712 $10^{-4}$ & 2.1547 & 8.4471 $10^{2}$ & 2.0624  & 8.5517 $10^{-3}$ & 2.0473   \\ \hline
-256  & 5.6058 $10^{-5}$ & 2.0806 & 1.9839 $10^{2}$ & 2.0478  & 2.0475 $10^{-3}$ & 1.9833   \\ \hline
-512  & 1.3278 $10^{-5}$ & 2.0778 & 4.6622 $10^{1}$ & 2.0478  & 4.9516 $10^{-4}$ & 1.9669   \\ \hline
+8    & 1.3343 $10^{-1}$ & 0.495 & 4.7893 $10^{5}$ & 0.24 & 6.1493           & 0.0747 \\ \hline
+16   & 2.9373 $10^{-2}$ & 2.10 & 1.0613 $10^{5}$ & 2.09  & 1.2275           & 2.25   \\ \hline
+32   & 5.1120 $10^{-3}$ & 2.58 & 1.8446 $10^{4}$ & 2.58  & 1.8943 $10^{-1}$ & 2.78   \\ \hline
+64   & 1.0558 $10^{-3}$ & 2.31 & 3.7938 $10^{3}$ & 2.31  & 3.7919 $10^{-2}$ & 2.37   \\ \hline
+128  & 2.3712 $10^{-4}$ & 2.18 & 8.4471 $10^{2}$ & 2.19  & 8.5517 $10^{-3}$ & 2.17   \\ \hline
+256  & 5.6058 $10^{-5}$ & 2.08 & 1.9839 $10^{2}$ & 2.09  & 2.0475 $10^{-3}$ & 2.07   \\ \hline
+512  & 1.3278 $10^{-5}$ & $-$ & 4.6622 $10^{1}$ & $-$  & 4.9516 $10^{-4}$ & $-$   \\ \hline
 \end{tabular}
 \end{center}
 \end{table}
@@ -943,17 +943,17 @@ Now, $c= 4.56289454140364$ and $q=2.18994931029196$. What is happening?
  \hline
 cells& density            & rate & pressure          & rate & velocity           & rate \\ \hline
 4    & 3.106397 $10^{-1}$ & $-$  & 5.254445 $10^{5}$ & $-$  & 3.288543           & $-$  \\ \hline
-8    & 7.491623 $10^{-2}$ & 2.06 & 1.636966 $10^{5}$ & 1.60 & 1.823880           & 0.14 \\ \hline
-16   & 2.079858 $10^{-2}$ & 1.81 & 4.627338 $10^{4}$ & 1.75 & 4.990605 $10^{-1}$ & 1.83 \\ \hline
-32   & 5.329627 $10^{-3}$ & 1.96 & 1.180287 $10^{4}$ & 1.92 & 1.261018 $10^{-1}$ & 1.98 \\ \hline
-64   & 1.341583 $10^{-3}$ & 1.99 & 2.967104 $10^{3}$ & 1.98 & 3.160914 $10^{-2}$ & 1.99 \\ \hline
+8    & 7.491623 $10^{-2}$ & 2.06 & 1.636966 $10^{5}$ & 1.62 & 1.823880           & 0.14 \\ \hline
+16   & 2.079858 $10^{-2}$ & 1.81 & 4.627338 $10^{4}$ & 1.77 & 4.990605 $10^{-1}$ & 1.83 \\ \hline
+32   & 5.329627 $10^{-3}$ & 1.96 & 1.180287 $10^{4}$ & 1.96 & 1.261018 $10^{-1}$ & 1.98 \\ \hline
+64   & 1.341583 $10^{-3}$ & 1.99 & 2.967104 $10^{3}$ & 1.99 & 3.160914 $10^{-2}$ & 1.99 \\ \hline
 128  & 3.359766 $10^{-4}$ & 1.99 & 7.428087 $10^{2}$ & 1.99 & 7.907499 $10^{-3}$ & 1.99 \\ \hline
-256  & 8.403859 $10^{-5}$ & 1.99 & 1.857861 $10^{2}$ & 2.00 & 1.977292 $10^{-3}$ & 2.00 \\ \hline
+256  & 8.403859 $10^{-5}$ & 1.99 & 1.857861 $10^{2}$ & 2.01 & 1.977292 $10^{-3}$ & 2.00 \\ \hline
 512  & 2.10075  $10^{-5}$ & $-$ & 4.7024   $10^{1}$ & $-$ & 4.9516   $10^{-4}$ & $-$ \\ \hline
 \end{tabular}
 \end{center}
 \end{table}
-\tcr{check the rates in this table as well\\}
+\tcr{check the rates in this table as well.} \tcb{I did and changed the values \\}
 It is observed that the convergence rate for the L$_1$ and L$_2$ norm of the error is 2: the entropy viscosity method preserves the high-order accuracy when the numerical solution is smooth, and the new definition of the entropy viscosity coefficient behaves appropriately in the low-Mach limit.
 
 %---------------------------------------------------------------------------------------------------
